@@ -1,3 +1,11 @@
+Wed Jun  2 07:17:17 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * TAO_IDL/be/be_interface.cpp:
+          Fixed VMS problems
+
+        * tests/OBV/Indirection/Messenger_i.cpp:
+          Layout changes
+
 Tue Jun  1 19:42:56 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * TAO_IDL/include/ast_porttype.h:
